# test_deploy

./: .buildinfo  .gitignore  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: python-checks.yml  python-release.yml
docs/: conf.py  index.rst
test_deploy/: __init__.py
tests/: test_test_deploy.py
