[tool.poetry]
name = "test_deploy"
version = "0.0.0"
description = ""
authors = ["Justin Fear <justin.fear@nih.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.4"
isort = "^5.7.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
